--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1191 @@
-.App {
+/* Reset Box Model */
+html,
+body,
+main,
+section,
+article,
+aside,
+nav,
+header,
+footer,
+address,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+dfn,
+em,
+small,
+s,
+strong,
+sub,
+sup,
+tt,
+var,
+u,
+i,
+mark,
+time,
+del,
+ins,
+kbd,
+q,
+code,
+samp,
+kbd,
+select,
+input,
+button,
+textarea,
+label,
+fieldset,
+legend,
+progress,
+meter,
+details,
+summary,
+div {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-weight: inherit;
+  font-style: inherit;
+  font-family: inherit;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+main,
+section,
+article,
+aside,
+nav,
+header,
+footer,
+address,
+figure {
+  display: block;
+}
+
+/* Reset Fonts */
+body {
+  line-height: 1;
+  font-size: 100%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: #b9b9b2;
+}
+
+/* Reset Lists */
+ol,
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+input:focus-visible,
+textarea:focus-visible {
+  outline: 1px solid #a0a0a2;
+}
+textarea {
+  resize: none;
+}
+/* Reset Form Elements */
+button,
+input,
+optgroup,
+select,
+textarea {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+
+/* Custom ScrollBar */
+html {
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #979c9e;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(149, 160, 162);
+}
+
+/* Reset Text Decoration */
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+}
+
+/* Reset Misc */
+table {
+  border-collapse: collapse;
+  /* border-spacing: 0; */
+}
+
+/* Display */
+.dn {
+  display: none;
+}
+
+.db {
+  display: block;
+}
+
+.dib {
+  display: inline-block;
+}
+
+.df,
+.v-center,
+.h-center,
+.box-center {
+  display: flex;
+}
+
+.dif {
+  display: inline-flex;
+}
+
+/* Verticle and Horizantal Align */
+.tac {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tal {
+  text-align: left;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tar {
+  text-align: right;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.taj {
+  text-align: justify;
+}
+.tdul,
+.tdul-h:hover {
+  text-decoration: underline;
+}
+.jcc,
+.h-center,
+.box-center {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.jcsb {
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.jcse {
+  justify-content: space-evenly;
+}
+.jcsa {
+  justify-content: space-around;
+}
+.jce {
+  justify-content: end;
+}
+
+.aic,
+.v-center,
+.box-center {
+  align-items: center;
+}
+.ais {
+  align-items: start;
+}
+.aie {
+  align-items: end;
+}
+.ase {
+  align-self: end;
+}
+.aisc {
+  align-items: stretch;
+}
+
+/* Column and Row */
+.fdc {
+  flex-direction: column;
+}
+
+.fdcr {
+  flex-direction: column-reverse;
+}
+
+.fdrr {
+  flex-direction: row-reverse;
+}
+
+.flx1 {
+  flex: 1;
+}
+.flx2 {
+  flex: 2;
+}
+.flx3 {
+  flex: 3;
+}
+
+.flx100 {
+  flex: 0 0 100%;
+}
+.flx40 {
+  flex: 0 0 40%;
+  max-width: 40%;
+}
+.flx50 {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.flx60 {
+  flex: 0 0 60%;
+  max-width: 60%;
+}
+.flx75 {
+  flex: 0 0 75%;
+  max-width: 75%;
+}
+.flx46 {
+  flex: 0 0 46%;
+  max-width: 46%;
+}
+.flx31 {
+  flex: 0 0 31.333333%;
+  max-width: 31.33333%;
+}
+.flx33 {
+  flex: 0 0 33.333333%;
+  max-width: 33.33333%;
+}
+.flx25 {
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+.flx16 {
+  flex: 0 0 16%;
+  max-width: 16%;
+}
+.flx295 {
+  flex: 0 0 292px;
+  max-width: 292px;
+}
+.flx48p {
+  flex: 0 0 48px;
+  max-width: 48px;
+}
+.fww {
+  flex-wrap: wrap;
+}
+
+/* overflow style */
+.ofh {
+  overflow: hidden;
+}
+.ofa {
+  overflow: auto;
+}
+
+/* Backgound Color & Font Color Style */
+.bg1,
+.bg-h1:hover {
+  background-color: #202028;
+}
+.bg2,
+.bg-h2:hover {
+  background-color: #7294ff;
+}
+.bg3 {
+  background-color: #293368;
+}
+.bg4 {
+  background-color: #293267;
+}
+.bg5 {
+  background-color: #5f3237;
+}
+.bg6 {
+  background-color: #5b2a4a;
+}
+.bg7 {
+  background-color: #01cb8f;
+}
+.bg8 {
+  background-color: #165246;
+}
+.bg9 {
+  background-color: #4c4e53;
+}
+.bg10 {
+  background-color: #141416;
+}
+.bg11 {
+  background-color: #078861c1;
+}
+.bg12 {
+  background-color: #5f3237c1;
+}
+.fc1,
+.fc-h1:hover {
+  color: #a0a0a2;
+}
+.fc2 {
+  color: #01cb8f;
+}
+.fc3 {
+  color: #ce4d4d;
+}
+.fc4,
+.fc-h4:hover {
+  color: #7294ff;
+}
+.fc5 {
+  color: #fefefd;
+}
+.fc6 {
+  color: #3f62ff;
+}
+.fc7 {
+  color: #00c98d;
+}
+.fc8 {
+  color: #f25e5e;
+}
+.fc9 {
+  color: #e841a0;
+}
+.fc10 {
+  color: #cbbb07;
+}
+
+.fill1,
+.fill-h1:hover svg {
+  fill: #424242;
+}
+.fill2,
+.fill-h2:hover svg {
+  fill: #000;
+}
+/* font style */
+
+.fs10 {
+  font-size: 10px;
+}
+.fs12 {
+  font-size: 12px;
+}
+.fs13 {
+  font-size: 13px;
+}
+.fs14 {
+  font-size: 14px;
+}
+.fs15 {
+  font-size: 15px;
+}
+.fs16 {
+  font-size: 16px;
+}
+.fs17 {
+  font-size: 17px;
+}
+.fs18 {
+  font-size: 18px;
+}
+.fs20 {
+  font-size: 20px;
+}
+.fs22 {
+  font-size: 22px;
+}
+.fs24 {
+  font-size: 24px;
+}
+.fs26 {
+  font-size: 26px;
+}
+.fs28 {
+  font-size: 28px;
+}
+.fs32 {
+  font-size: 32px;
+}
+.fs36 {
+  font-size: 36px;
+}
+.fs40 {
+  font-size: 40px;
+}
+.fs44 {
+  font-size: 44px;
+}
+.fs45 {
+  font-size: 45px;
+}
+.fs56 {
+  font-size: 56px;
+}
+.fs64 {
+  font-size: 64px;
+}
+
+.lh14 {
+  line-height: 14px;
+}
+.lh18 {
+  line-height: 18px;
+}
+.lh20 {
+  line-height: 20px;
+}
+
+.lh22 {
+  line-height: 22px;
+}
+.lh24 {
+  line-height: 24px;
+}
+.lh28 {
+  line-height: 28px;
+}
+.lh30 {
+  line-height: 30px;
+}
+.lh36 {
+  line-height: 36px;
+}
+.lh42 {
+  line-height: 42px;
+}
+.lh48 {
+  line-height: 48px;
+}
+.lh58 {
+  line-height: 58px;
+}
+.lh60 {
+  line-height: 72px;
+}
+
+.ls1 {
+  letter-spacing: 0.5px;
+}
+.ls2 {
+  letter-spacing: 1px;
+}
+
+.fw3 {
+  font-weight: 300;
+}
+.fw4 {
+  font-weight: 400;
+}
+.fw5 {
+  font-weight: 500;
+}
+.fw6 {
+  font-weight: 600;
+}
+.fw7 {
+  font-weight: 700;
+}
+.fw8 {
+  font-weight: 800;
+}
+
+.ttu {
+  text-transform: uppercase;
+}
+.fsi {
+  font-style: italic;
+}
+
+.text-row {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.lc1 {
+  -webkit-line-clamp: 1;
+}
+.lc2 {
+  -webkit-line-clamp: 2;
+}
+.lc3 {
+  -webkit-line-clamp: 3;
+}
+.lc4 {
+  -webkit-line-clamp: 4;
+}
+.of-cover {
+  object-fit: cover;
+}
+/* Position Style */
+.pr,
+.navbar li {
+  position: relative;
+}
+
+.pa,
+.aft:after,
+.bef:before {
+  position: absolute;
+}
+.pf {
+  position: fixed;
+}
+.ps {
+  position: sticky;
+}
+.l0 {
+  left: 0;
+}
+
+.r0 {
+  right: 0;
+}
+
+.t0 {
+  top: 0;
+}
+.t10 {
+  top: 10px;
+}
+.t46 {
+  top: 46px;
+}
+.t100 {
+  top: 100%;
+}
+
+.b0 {
+  bottom: 0;
+}
+.zi-1 {
+  z-index: -1;
+}
+.zi1 {
+  z-index: 1;
+}
+.zi2 {
+  z-index: 2;
+}
+.zi3 {
+  z-index: 3;
+}
+.zi99 {
+  z-index: 99;
+}
+
+.cp {
+  cursor: pointer;
+}
+
+/* Spacing Style */
+.mlra {
+  margin-left: auto;
+  margin-right: auto;
+}
+.mla {
+  margin-left: auto;
+}
+.m8 {
+  margin: 8px;
+}
+.m12 {
+  margin: 12px;
+}
+.m16 {
+  margin: 16px;
+}
+.m24 {
+  margin: 24px;
+}
+.m32 {
+  margin: 32px;
+}
+
+.mt4 {
+  margin-top: 4px;
+}
+.mt8,
+.mtb8 {
+  margin-top: 8px;
+}
+.mt12,
+.mtb12 {
+  margin-top: 12px;
+}
+.mt14,
+.mtb14 {
+  margin-top: 14px;
+}
+.mt16,
+.mtb16 {
+  margin-top: 16px;
+}
+.mt24,
+.mtb24 {
+  margin-top: 24px;
+}
+.mt32,
+.mtb32 {
+  margin-top: 32px;
+}
+.mt40,
+.mtb40 {
+  margin-top: 40px;
+}
+.mt48,
+.mtb48 {
+  margin-top: 48px;
+}
+.mt96 {
+  margin-top: 120px;
+}
+.mt200 {
+  margin-top: 200px;
+}
+
+.ml4,
+.mlr4 {
+  margin-left: 4px;
+}
+.ml8,
+.mlr8 {
+  margin-left: 8px;
+}
+.ml12,
+.mlr12 {
+  margin-left: 12px;
+}
+.ml16,
+.mlr16 {
+  margin-left: 16px;
+}
+.ml24,
+.mlr24 {
+  margin-left: 24px;
+}
+.ml32,
+.mlr32 {
+  margin-left: 32px;
+}
+.ml40,
+.mlr40 {
+  margin-left: 40px;
+}
+.ml48,
+.mlr48 {
+  margin-left: 48px;
+}
+.mb72 {
+  margin-bottom: 72px;
+}
+
+.mr4,
+.mlr4 {
+  margin-right: 4px;
+}
+.mr8,
+.mlr8 {
+  margin-right: 8px;
+}
+.mr12,
+.mlr12 {
+  margin-right: 12px;
+}
+.mr16,
+.mlr16 {
+  margin-right: 16px;
+}
+.mr24,
+.mlr24 {
+  margin-right: 24px;
+}
+.mr32,
+.mlr32 {
+  margin-right: 32px;
+}
+.mr40,
+.mlr40 {
+  margin-right: 40px;
+}
+.mr48,
+.mlr48 {
+  margin-right: 48px;
+}
+
+.mb4 {
+  margin-bottom: 4px;
+}
+.mb8,
+.mtb8 {
+  margin-bottom: 8px;
+}
+.mb12,
+.mtb12 {
+  margin-bottom: 12px;
+}
+.mb14,
+.mtb14 {
+  margin-bottom: 14px;
+}
+.mb16,
+.mtb16 {
+  margin-bottom: 16px;
+}
+.mb24,
+.mtb24 {
+  margin-bottom: 24px;
+}
+.mb32,
+.mtb32 {
+  margin-bottom: 32px;
+}
+.mb40,
+.mtb40 {
+  margin-bottom: 40px;
+}
+.mb48,
+.mtb48 {
+  margin-bottom: 48px;
+}
+
+.pla {
+  padding-left: auto;
+}
+
+.p4 {
+  padding: 4px;
+}
+.p8 {
+  padding: 8px;
+}
+.p12 {
+  padding: 12px;
+}
+.p16 {
+  padding: 16px;
+}
+.p17 {
+  padding: 17px;
+}
+.p18 {
+  padding: 18px;
+}
+.p19 {
+  padding: 19px;
+}
+.p20 {
+  padding: 20px;
+}
+.p24 {
+  padding: 24px;
+}
+.p32 {
+  padding: 32px;
+}
+.p60 {
+  padding: 60px;
+}
+
+.pt4,
+.ptb4 {
+  padding-top: 4px;
+}
+.pt8,
+.ptb8 {
+  padding-top: 8px;
+}
+.pt12,
+.ptb12 {
+  padding-top: 12px;
+}
+.pt14,
+.ptb14 {
+  padding-top: 14px;
+}
+.pt16,
+.ptb16 {
+  padding-top: 16px;
+}
+.pt24,
+.ptb24 {
+  padding-top: 24px;
+}
+.pt32,
+.ptb32 {
+  padding-top: 32px;
+}
+.pt40,
+.ptb40 {
+  padding-top: 40px;
+}
+.pt48,
+.ptb48 {
+  padding-top: 48px;
+}
+.pt90,
+.ptb90 {
+  padding-top: 90px;
+}
+
+.pl4,
+.plr4 {
+  padding-left: 4px;
+}
+.pl8,
+.plr8 {
+  padding-left: 8px;
+}
+.pl12,
+.plr12 {
+  padding-left: 12px;
+}
+.pl16,
+.plr16 {
+  padding-left: 16px;
+}
+.pl24,
+.plr24 {
+  padding-left: 24px;
+}
+.pl28,
+.plr28 {
+  padding-left: 28px;
+}
+.pl32,
+.plr32 {
+  padding-left: 32px;
+}
+.pl40,
+.plr40 {
+  padding-left: 40px;
+}
+.pl48,
+.plr48 {
+  padding-left: 48px;
+}
+.pl64 {
+  padding-left: 64px;
+}
+
+.pr4,
+.plr4 {
+  padding-right: 4px;
+}
+.pr8,
+.plr8 {
+  padding-right: 8px;
+}
+.pr12,
+.plr12 {
+  padding-right: 12px;
+}
+.pr16,
+.plr16 {
+  padding-right: 16px;
+}
+.pr24,
+.plr24 {
+  padding-right: 24px;
+}
+.pr28,
+.plr28 {
+  padding-right: 28px;
+}
+.pr32,
+.plr32 {
+  padding-right: 32px;
+}
+.pr40,
+.plr40 {
+  padding-right: 40px;
+}
+.pr48,
+.plr48 {
+  padding-right: 48px;
+}
+
+.pb4,
+.ptb4 {
+  padding-bottom: 4px;
+}
+.pb8,
+.ptb8 {
+  padding-bottom: 8px;
+}
+.pb12,
+.ptb12 {
+  padding-bottom: 12px;
+}
+.pb14,
+.ptb14 {
+  padding-bottom: 14px;
+}
+.pb16,
+.ptb16 {
+  padding-bottom: 16px;
+}
+.pb24,
+.ptb24 {
+  padding-bottom: 24px;
+}
+.pb32,
+.ptb32 {
+  padding-bottom: 32px;
+}
+.pb40,
+.ptb40 {
+  padding-bottom: 40px;
+}
+.pb48,
+.ptb48 {
+  padding-bottom: 48px;
+}
+.pb90,
+.ptb90 {
+  padding-bottom: 90px;
+}
+
+.ptb64 {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+/* border Style */
+.brd1 {
+  border: 1px solid #d9d9d9;
+}
+.brd2 {
+  border: 1px solid #a9d621;
+}
+.brd3 {
+  border: 1px solid #b8b8b8;
+}
+.brd4 {
+  border: 10px solid #ffff;
+}
+.brd-b1 {
+  border-bottom: 0.5px solid #373535;
+}
+.brd-b2 {
+  border-bottom: 5px solid #f7322e;
+}
+.brd-b3 {
+  border-bottom: 2px solid #1f1e1e;
+}
+.brd-t1 {
+  border-top: 1px solid rgba(0, 0, 0, 0.06);
+}
+.bs1,
+.bs1-h1:hover {
+  box-shadow: 0 0 27px rgba(12, 12, 12, 7%);
+}
+.bs2 {
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.08);
+}
+.bs4 {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.aft:after,
+.bef:before {
+  content: "";
+}
+
+.tf-h1:hover {
+  transform: translateX(10px);
+}
+.transit1,
+.md-btn {
+  transition: all 0.2s;
+}
+.transit2 {
+  transition: all 0.3s;
+}
+.wsnw {
+  white-space: nowrap;
+}
+/* Shape Style */
+
+.w100px {
+  width: 100px;
+}
+.w100vw {
+  width: 100vw;
+}
+.w100 {
+  width: 100%;
+}
+.w40 {
+  width: 40%;
+}
+.w50 {
+  width: 50%;
+}
+.w60 {
+  width: 60%;
+}
+.w80 {
+  width: 80%;
+}
+.w18p {
+  width: 18px;
+}
+.w24p {
+  width: 24px;
+}
+.w40p {
+  width: 40px;
+}
+.w48p {
+  width: 48px;
+}
+.w64p {
+  width: 64px;
+}
+.w72p {
+  width: 72px;
+}
+
+.w-m64 {
+  min-width: 64px;
+  max-width: 64px;
+}
+.w-m48 {
+  min-width: 48px;
+  max-width: 48px;
+}
+.h18 {
+  height: 18px;
+}
+.h24 {
+  height: 24px;
+}
+.h40 {
+  height: 40px;
+}
+.h48 {
+  height: 48px;
+}
+.h56 {
+  height: 56px;
+}
+.h64 {
+  height: 64px;
+}
+.h100vh {
+  height: 100vh;
+}
+.h100 {
+  height: 100%;
+}
+
+.br2 {
+  border-radius: 2px;
+}
+
+.br4 {
+  border-radius: 4px;
+}
+.br8 {
+  border-radius: 8px;
+}
+.bbr8 {
+  border-radius: 0px 0px 8px 8px;
+}
+.br24 {
+  border-radius: 24px;
+}
+.br50 {
+  border-radius: 50%;
+}
+.br-br-01 {
+  border-radius: 0 0 0 6vw;
+}
+.box-sd1 {
+  box-shadow: 0px 5px 30px -10px rgba(0, 0, 0, 0.15);
+}
+.box-sd2 {
+  box-shadow: 0px 10px 40px -5px rgba(0, 0, 0, 0.15);
+}
+.box-sd3 {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
+}
+.wrapper {
+  width: 93%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.logo {
+  height: 48px;
+}
+input {
+  outline: 1px solid #a0a0a2;
+}
+.navlink:after {
+  width: 0;
+  height: 100%;
+  border-radius: 24px;
+  left: 0;
+  top: 0;
+  background: #7294ff;
+  transition: all 0.3s;
+}
+.navitem:hover .navlink:after,
+.navitem .active:after {
+  width: 3px;
+}
+.navitem .active {
+  color: #7294ff;
+}
+.navbar-container {
+  height: 100%;
+}
+
+td,
+th {
+  padding: 16px 0px;
+  border-bottom: 0.5px solid #373535;
+}
+.cust-profile {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+.circle-background {
+  fill: none;
+  stroke: #2b3266;
+}
+.circle-progress {
+  fill: none;
+  stroke: #7493ff;
+  stroke-linecap: round;
 }
